@@ -18,6 +18,8 @@
 	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 *****************************************************************************/
+
+#include <QCoreApplication>
 #include "planeanalysistask.h"
 #include <objects3d/Plane.h>
 #include <objects3d/WPolar.h>
